--- a/FashinistaApp/app/src/main/AndroidManifest.xml
+++ b/FashinistaApp/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity
             android:name=".Acceuil"
             android:label="@string/title_activity_acceuil"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Main2Activity"></activity>
     </application>
 
 </manifest>
